--- a/sftp-config.json
+++ b/sftp-config.json
@@ -14,8 +14,8 @@
     "confirm_sync": true,
     "confirm_overwrite_newer": false,
     
-    "host": "10.211.55.4",
-    "user": "root",
+    "host": "10.211.55.3",
+    "user": "yangfan",
     "password": "111111",
     "port": "22",
     
